--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,13 @@
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
 .utmp/
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+/OneButtonRacer/[Ll]ibrary/
+/OneButtonRacer/[Tt]emp/
+/OneButtonRacer/[Oo]bj/
+/OneButtonRacer/[Bb]uild/
+/OneButtonRacer/[Bb]uilds/
+/OneButtonRacer/[Ll]ogs/
+/OneButtonRacer/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
